--- a/model/src/main/resources/api-ldap.yaml
+++ b/model/src/main/resources/api-ldap.yaml
@@ -11,6 +11,17 @@ tags:
 paths:
   /v1/ldap/config:
     post:
+      x-dr-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - LDAP API
       operationId: modifyLdapConfig
@@ -40,6 +51,17 @@ paths:
         '404':
           description: Not Found
     get:
+      x-dr-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - LDAP API
       operationId: queryLdapConfig
@@ -66,6 +88,17 @@ paths:
           description: Not Found
   /v1/ldap/config/check:
     post:
+      x-dr-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - LDAP API
       operationId: testLdapConfig
@@ -96,9 +129,22 @@ paths:
           description: Not Found
   /v1/ldap/config/change:
     post:
+      x-dr-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
       tags:
         - LDAP API
       operationId: changeLdapConfig
+      summary: 开启或关闭LDAP配置
+      description: 开启或关闭LDAP配置
       parameters:
         - name: isLdapEnable
           in: query
