--- a/api/external/api-kms.yaml
+++ b/api/external/api-kms.yaml
@@ -14,8 +14,9 @@ tags:
 paths:
   /v1/kmc/key:
     put:
+      x-dr-role: 'N'
       x-product: CyberEngine,OceanProtect X
-      x-dm-role: 'Y'
+      x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 25081
       x-auth-required: 'Y'
@@ -54,6 +55,7 @@ paths:
             - global
   /v1/kmc/keylifetime:
     get:
+      x-dr-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
@@ -92,6 +94,7 @@ paths:
         - Authorization:
             - global
     put:
+      x-dr-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
@@ -142,12 +145,12 @@ paths:
       x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
-      x-access-port: 30081
-      x-auth-required: 'N'
+      x-access-port: 25081
+      x-auth-required: 'Y'
       x-rd-admin-role: 'N'
       x-auditor-role: 'N'
       x-dp-admin-role: 'N'
-      x-public-api: 'N'
+      x-public-api: 'Y'
       x-sysadmin-role: 'N'
       tags:
         - kms-api
@@ -190,11 +193,11 @@ paths:
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
       x-access-port: 25081
-      x-auth-required: 'N'
+      x-auth-required: 'Y'
       x-rd-admin-role: 'N'
       x-auditor-role: 'N'
       x-dp-admin-role: 'N'
-      x-public-api: 'N'
+      x-public-api: 'Y'
       x-sysadmin-role: 'N'
       tags:
         - kms-api
@@ -236,7 +239,7 @@ paths:
       x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
-      x-access-port: 25081
+      x-access-port: 30081
       x-auth-required: 'N'
       x-rd-admin-role: 'N'
       x-auditor-role: 'N'
