--- a/api/external/api-sysbackup.yaml
+++ b/api/external/api-sysbackup.yaml
@@ -9,9 +9,12 @@ basePath: /
 tags:
   - name: sysbackup-api
     description: 系统管理数据备份
+  - name: internal-sysbackup-api
 paths:
   /v1/sysbackup/images:
     get:
+      x-dr-role: 'N'
+      x-dm-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-impact-subsystem: 不影响
       x-access-port: 25081
@@ -72,8 +75,7 @@ paths:
           x-example: 0
         - name: status
           in: query
-          description: >-
-            备份记录状态(CREATING(1),AVAILABLE(2),INVALID(3),RESTORING(4),BACKUP_FAILED(5),RESTORE_FAILED(6))
+          description: 备份记录状态(CREATING(1),AVAILABLE(2),INVALID(3),RESTORING(4),BACKUP_FAILED(5),RESTORE_FAILED(6))
           required: false
           type: array
           items:
@@ -96,6 +98,8 @@ paths:
         - Authorization:
             - global
     post:
+      x-dr-role: 'N'
+      x-dm-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-impact-subsystem: 不影响
       x-access-port: 25081
@@ -143,6 +147,8 @@ paths:
             - global
   /v1/sysbackup/images/{imagesId}:
     get:
+      x-dr-role: 'N'
+      x-dm-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-impact-subsystem: 不影响
       x-access-port: 25081
@@ -186,6 +192,8 @@ paths:
         - Authorization:
             - global
     delete:
+      x-dr-role: 'N'
+      x-dm-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-impact-subsystem: 不影响
       x-access-port: 25081
@@ -230,6 +238,8 @@ paths:
             - global
   /v1/sysbackup/images/{imagesId}/action/download:
     get:
+      x-dr-role: 'N'
+      x-dm-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-impact-subsystem: 不影响
       x-access-port: 25081
@@ -271,6 +281,8 @@ paths:
             - global
   /v1/sysbackup/images/{imagesId}/action/recovery:
     post:
+      x-dr-role: 'N'
+      x-dm-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-impact-subsystem: 不影响
       x-access-port: 25081
@@ -325,6 +337,8 @@ paths:
             - global
   /v1/sysbackup/policy:
     get:
+      x-dr-role: 'N'
+      x-dm-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-impact-subsystem: 不影响
       x-access-port: 25081
@@ -362,6 +376,8 @@ paths:
         - Authorization:
             - global
     post:
+      x-dr-role: 'N'
+      x-dm-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-impact-subsystem: 不影响
       x-access-port: 25081
@@ -411,6 +427,8 @@ paths:
             - global
   /v1/sysbackup/policy/action/run:
     post:
+      x-dr-role: 'N'
+      x-dm-role: 'N'
       x-product: CyberEngine,OceanProtect X
       x-impact-subsystem: 不影响
       x-access-port: 25081
@@ -460,13 +478,14 @@ paths:
             - global
   /v1/sysbackup/sftp/connection:
     post:
+      x-dr-role: 'N'
       x-product: CyberEngine,OceanProtect X
       tags:
         - sysbackup-api
       summary: 测试SFTP服务器连通性
       x-dm-role: 'N'
       x-impact-subsystem: 不影响
-      x-access-port: 30081
+      x-access-port: 25081
       x-auth-required: 'Y'
       x-rd-admin-role: 'N'
       x-auditor-role: 'Y'
@@ -487,6 +506,29 @@ paths:
           description: ''
           schema:
             $ref: '#/definitions/SystemBackupCommonResponseBody'
+  /v1/internal/sysbackup/policy:
+    get:
+      x-dr-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 30081
+      x-auth-required: 'N'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'N'
+      x-sysadmin-role: 'N'
+      tags:
+        - internal-sysbackup-api
+      summary: 获取是否配置备份策略
+      description: 获取是否配置备份策略
+      operationId: getBackupPolicyUsingGet
+      responses:
+        '200':
+          description: 备份策略
+          schema:
+            $ref: '#/definitions/SystemBackupPolicyResponse'
 securityDefinitions:
   Authorization:
     type: apiKey
@@ -802,3 +844,28 @@ definitions:
       port:
         type: string
         description: sftp 服务器端口
+  SystemBackupPolicyResponse:
+    type: object
+    properties:
+      id:
+        type: integer
+        format: int64
+      keepCount:
+        type: integer
+        format: int32
+      backupTime:
+        type: string
+      destType:
+        type: integer
+        format: int32
+      destIp:
+        type: string
+      destPath:
+        type: string
+      destUsername:
+        type: string
+      destPort:
+        type: string
+      defaultPolicy:
+        type: integer
+        format: int32
