--- a/api/internal/api-schedule.yaml
+++ b/api/internal/api-schedule.yaml
@@ -12,7 +12,17 @@ tags:
 paths:
   /v1/schedules:
     post:
-      x-product: CyberEngine,OceanProtect X
+      x-dr-role: 'N'
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'N'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'N'
+      x-sysadmin-role: 'N'
+      x-product: CyberEngine,OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       tags:
         - Scheduler API
       summary: createSchedule
@@ -47,8 +57,19 @@ paths:
         - Authorization:
             - global
       deprecated: false
+      x-order: 0
     delete:
-      x-product: CyberEngine,OceanProtect X
+      x-dr-role: 'N'
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'N'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'N'
+      x-sysadmin-role: 'N'
+      x-product: CyberEngine,OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       tags:
         - Scheduler API
       summary: batchDeleteSchedule
@@ -76,9 +97,20 @@ paths:
         - Authorization:
             - global
       deprecated: false
+      x-order: 1
   /v1/schedules/next-time/{schedule_id}:
     get:
-      x-product: CyberEngine,OceanProtect X
+      x-dr-role: 'N'
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'N'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'N'
+      x-sysadmin-role: 'N'
+      x-product: CyberEngine,OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       tags:
         - Scheduler API
       summary: getNextTime
@@ -106,9 +138,20 @@ paths:
         - Authorization:
             - global
       deprecated: false
+      x-order: 2
   /v1/schedules/{schedule_id}:
     delete:
-      x-product: CyberEngine,OceanProtect X
+      x-dr-role: 'N'
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'N'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'N'
+      x-sysadmin-role: 'N'
+      x-product: CyberEngine,OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
       tags:
         - Scheduler API
       summary: deleteSchedule
@@ -134,6 +177,7 @@ paths:
         - Authorization:
             - global
       deprecated: false
+      x-order: 4
   /v1/internal/schedules/crons/{cron}/next-time:
     get:
       x-dr-role: 'N'
@@ -189,6 +233,31 @@ paths:
           description: Bad Gateway
           schema:
             type: string
+      x-order: 3
+  /v1/internal/health:
+    get:
+      x-dr-role: 'N'
+      x-product: OceanProtect X8000,OceanProtect X6000,OceanProtect X3000
+      x-dm-role: 'N'
+      x-impact-subsystem: 不影响
+      x-access-port: 30081
+      x-auth-required: 'N'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'N'
+      x-public-api: 'N'
+      x-sysadmin-role: 'N'
+      tags:
+        - Scheduler API
+      summary: 检查健康状态
+      description: 检查健康状态
+      operationId: scheduleInternalHealthUsingGET
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: string
+      x-order: 5
 securityDefinitions:
   Authorization:
     type: apiKey
